# url-store

./: .gitignore  LICENSE  LICENSE.fr  README.md
Categora/: .gitignore  CMakeLists.txt  README.md
Categora-extension/: README.md
Categora-extension/src/: background.js  categora.js  config.js  manifest-chrome.json  manifest.json  popup.css  popup.html  popup.js
Categora/cli/: CMakeLists.txt  envloader.cpp  envloader.h  main.cpp
Categora/gui/: CMakeLists.txt
Categora/src/: CMakeLists.txt
Categora/src/api/: apimanager.cpp  apimanager.h
Categora/src/api/deepseek/: deepseekapimanager.cpp  deepseekapimanager.h
Categora/src/db/: CMakeLists.txt  abstractdbmanager.cpp  abstractdbmanager.h  sqlitedbmanager.cpp  sqlitedbmanager.h
Categora/src/models/: CMakeLists.txt
Categora/src/models/token/: qttokenwrapper.cpp  qttokenwrapper.h  token.cpp  token.h
Categora/src/models/url/: qturlwrapper.cpp  qturlwrapper.h  url.cpp  url.h
Categora/src/network/: CMakeLists.txt  server.cpp  server.h
Categora/src/network/api/: apimanager.h
Categora/src/network/api/deepseek/: deepseekapimanager.cpp  deepseekapimanager.h
Categora/src/network/server/: abstractserver.cpp  abstractserver.h  httpserver.cpp  httpserver.h  tcpserver.cpp  tcpserver.h
Categora/test/: CMakeLists.txt
Categora/test/gui/: CMakeLists.txt
Categora/test/integration/: CMakeLists.txt
Categora/test/unit/: CMakeLists.txt  deepseekapitests.cpp  mocknetworkaccessmanager.h  mocknetworkreply.h  testmodeloperators.cpp  testsqlitedatabasemanager.cpp  testsqlitedatabasemanager.h  testtcpserver.cpp
url-store/: .gitignore  CMakeLists.txt  main.cpp  url-store_fr_CA.ts
url-store/api/: apimanager.cpp  apimanager.h
url-store/api/deepseek/: deepseekapimanager.cpp
url-store/db/: dbmanager.cpp  dbmanager.h
url-store/models/url/: url.cpp  url.h
